# RayTracingInOneWeekend

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: enableWarnings.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  shaders.cmake  spdlog.cmake
cmake/VSGit/: FindGit.cmake
gl/: CMakeLists.txt
gl/include/: CMakeLists.txt
gl/include/gl/: bitflag.hpp  buffer.hpp  framebuffer.hpp  gl.hpp  gui.hpp  id.hpp  shaders.hpp  texture.hpp  vao.hpp  window.hpp
gl/src/: CMakeLists.txt  buffer.cpp  gui.cpp  logger.cpp  logger.hpp  shaders.cpp  vao.cpp  window.cpp
logger/: CMakeLists.txt
logger/include/logger/: log.hpp
src/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp
src/shaders/: CMakeLists.txt  basic.slang  raytrace.slang
src/shaders/include/: constants.slang  material.slang  objects.slang  rand.slang  ray.slang  raymarching.slang  util.slang  uv.slang
